// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> renders 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {caption} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {children} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {dataSource} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {itemMargin} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={184}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 16,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {navigation} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "left": -16,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            Array [
              Object {
                "borderRadius": 3,
              },
              false,
              false,
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "justifyContent": "center",
              },
              Object {
                "height": 44,
                "minWidth": 44,
                "paddingHorizontal": 28,
              },
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              Object {
                "height": 28,
                "minWidth": 28,
                "paddingHorizontal": 12,
              },
              false,
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              Object {
                "backgroundColor": "#707070",
              },
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                Object {
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "right": -16,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        pointerEvents="box-only"
        style={
          Array [
            undefined,
            Array [
              Object {
                "borderRadius": 3,
              },
              false,
              false,
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "justifyContent": "center",
              },
              Object {
                "height": 44,
                "minWidth": 44,
                "paddingHorizontal": 28,
              },
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              },
              Object {
                "height": 28,
                "minWidth": 28,
                "paddingHorizontal": 12,
              },
              false,
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              Object {
                "backgroundColor": "#707070",
              },
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                Object {
                  "height": 16,
                  "width": 16,
                },
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderRadius": 3,
                "bottom": 0,
                "left": 0,
                "overflow": "hidden",
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#ffffff",
                "height": 0,
                "opacity": 0,
                "width": 0,
                "zIndex": 0,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {snap=false} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    horizontal={true}
    onScroll={[Function]}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {steps} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={360}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {style} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "backgroundColor": "orange",
        "padding": 20,
      }
    }
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=11"
          title="Title 0"
        />
      </View>
      <View
        style={
          Object {
            "marginRight": 12,
          }
        }
      >
        <View
          image="https://picsum.photos/320/200?image=12"
          title="Title 1"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<Slider> when {title} 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <RCTScrollView
    decelerationRate="fast"
    horizontal={true}
    onScroll={[Function]}
    pagingEnabled={false}
    removeClippedSubviews={true}
    scrollEventThrottle={1000}
    showsHorizontalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={180}
  >
    <View />
  </RCTScrollView>
</View>
`;
